@@ -18,9 +18,9 @@ value=val;
 return value;
 }
 public static SalesVenueType fromValue(String v) {
-		for (SalesVenueType c : values())
-			if (c.value.equals(v))
-				return c;
+																									for (SalesVenueType c : values())
+																										if (c.value.equals(v))
+																											return c;
 throw new IllegalArgumentException(v);
 }
 }
