@@ -15,9 +15,9 @@ value=val;
 return value;
 }
 public static ErrorSeverity fromValue(String v) {
-		for (ErrorSeverity c : values())
-			if (c.value.equals(v))
-				return c;
+																									for (ErrorSeverity c : values())
+																										if (c.value.equals(v))
+																											return c;
 throw new IllegalArgumentException(v);
 }
 }
