@@ -1,4 +1,8 @@
+
+PayPal  Java AdaptiveAccounts SDK - 0.6.88
+Release Date  - 11-Apr-2012
+This release contains wsdl update 88.
+-----------------------------------------------
 PayPal  Java AdaptiveAccounts SDK - 0.6.86
 Release Date  - 27-Feb-2012
 This release contains new AdaptiveAccounts SDK (NVP) and samples for AdaptiveAccounts api's.
-==========================================================================================================
